app/public/static/css/app.css
body {
    margin: 0;
    font-family: 'Raleway', sans-serif;
    background: rgb(255,107,107); /* Old browsers */
    background: -moz-linear-gradient(-45deg, rgba(255,107,107,1) 0%, rgba(85,98,112,1) 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, rgba(255,107,107,1) 0%,rgba(85,98,112,1) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, rgba(255,107,107,1) 0%,rgba(85,98,112,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6b6b', endColorstr='#556270',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
    background-image: url('../img/trianglify.svg');
    background-size: cover;
    background-attachment: fixed;
    box-sizing: border-box;
    background-position: center;
}
body>a:first-child {
    left: -999px;
    left: 63em;
    position: absolute;
    top: auto;
    width: 0;
    height: 0;
    overflow: hidden;
    text-decoration: underline;
    z-index: -999;
    transition: box-shadow 0.2s, filter 0.2s;
    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .0);
    filter: blur(5px);
    overflow: none;
}
body>a:first-child:focus, body>a:first-child:active {
    color: #fff;
    left: 0;
    top: 0;
    overflow: auto;
    z-index: 999;
    /*Chapter 7.32 - Dim background*/
    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .4);
    width: 100%;
    background: #FF6B6B;
    display: block;
    color: rgba(255, 255, 255, 1);
    padding: 0.75em;
    height: 2.5em;
    text-align: center;
    box-sizing: border-box;
    outline: 0;
    /*Chapter 7.33 - blur*/
    filter: blur(0);
}
a {
    color: #FF6B6B;
    text-decoration: none;
    border-bottom: 0.2em solid;
}
a:hover, a:focus {
    color: #58636e;
    background: #FF6B6B44;
}
.btn {
    display: block;
    background: #FF6B6B;
    color: #fff;
    border: 0;
    padding: 1em;
    font-size: 1.4em;
    transition: 0.2s;
}
.btn:hover, .btn:focus {
    background: #556270;
    color: #fff;
}
.flex {
    display: flex;
    flex-direction: row;
}
.row {
    max-width: 60em;
    padding: 0 1em 0 1em;
}
.row-wide {
    max-width: 80em;
    padding: 0 1em 0 1em;
}
.center {
    margin: 0 auto;
}
@keyframes animatedBackground {
    to { background-position-x:100%; }
}
header {
    color: #fff;
}
header.splash {
    min-height: 100vh;
    /* margin-top: -3.5em; */
}
header img {
    display: block;
    padding-bottom: 2em;
    width: 200px;
    margin: 0 auto;
    border-radius: 50%;
    box-sizing: border-box;
    overflow: none; 

}
header > .row {
    padding-top: 6em;
    padding-bottom: 6em;
    transition: 0.5s;
}
header.fade > .row {
    transform: scale(0.8);
    opacity: 0;
}
header.unfade >.row {
    transform: none;
    transition-delay: 0.2s;
    opacity: 1;
}
header h1, header h2, header h3 {
    text-align: center;
    color: #FFF;
    font-weight: 400;
}
header h1 {
    font-size: 4em;
    padding: 0;
    margin: 0;
}
header h2 {
    opacity: 0.8;
    line-height: 160%;
}
header .navButton .icon {
    font-size: 2em;
}
.modalDialog {
    position: absolute;
    width: 100%;
    height: auto;
	font-family: Arial, Helvetica, sans-serif;
	top: 0;
	right: 0;
	bottom: 0;
    left: 0;
	z-index: 99999;
    transition: 0.5s;   
    opacity: 0;
    pointer-events: none;
    margin: 0 auto;
    color: #fff;
}
blockquote {
    background: #f9f9f9;
    border-left: 10px solid #ccc;
    color: black;
    padding: 2em;
    overflow: hidden;
    line-height: 130%;
    text-align: center;
    font-size: 1.2em;
    font-weight: 300;
    box-sizing: border-box;
}
.projectListContent blockquote {
    max-width: 40em;
    margin: 0 auto;
}
blockquote.fancy:before {
    color: #ccc;
    content: open-quote;
    font-size: 4em;
    line-height: 0.1em;
    margin-right: 0.25em;
    vertical-align: -0.4em;
}
blockquote:after {
    color: #ccc;
    content: close-quote;
    font-size: 4em;
    line-height: 0.1em;
    margin-left: 0.25em;
    vertical-align: -0.4em;
}
.modalDialog.open {
    opacity:1;
    pointer-events: auto;
    transition-delay: 0.4s;
}
.modalDialog > div {
	position: relative;
    padding: 2em;
    /* background: whitesmoke; */
    padding-bottom: 6em;
    transition: 0.5s;  
    /* transition-delay: 0.4s; */
}
.modalDialog.open > div {
    transition: 0.2s;
}
.modalDialog button {
    position: absolute; 
    bottom: 0;
    left: 0;
    width: 100%;
}
.modalDialog h2 {
    font-size: 3em;
    margin-top: 0;
    font-weight: 400;
    text-align: center;
}
.modalDialog .content> div > p {
    font-size: 1.2em;
    background: #ffffff;
    text-align: justify;
    color: #000;
    hyphens: auto;
    padding: 2em;
    font-weight: 300;
}
.modalDialog .close {
    background: #556270;
    position: fixed;
    transition: 0.2s;
    bottom: -0.4em;
    left: 0;
	color: #fff;
	line-height: 25px;
	text-align: center;
    padding: 1.5em;
    border-top: 0.4em solid #00000099;
    box-sizing: border-box;
    width: 100%;
    transition-delay: 0;
    margin: 0 auto;
	text-decoration: none;
	font-weight: bold;
    cursor:pointer;
    display: block;
    margin-top: 4em;
}
.modalDialog .close:hover, .modalDialog .close:focus { 
    background: #FF6B6B;   
}
nav {
    transition: 1s;
    position: fixed;
    z-index: 99;
    overflow: hidden;
    background: #fff;
    top: 0;
    left: 0;
    margin: 0;
    width: 100%;
    height: 3.5em;
}
nav a {
    display: block;
    line-height: 200%;
    font-weight: bold;
    color: #FFF;
    text-decoration: none;
    font-size: 1.3em;
    width: 100%;
    text-align: center;
    color: #000;
    padding: 0.2em;
    box-sizing: border-box;
    margin: 0;
    transition: 0.2s;
    border-bottom: 4em solid rgba(0,0,0, 0.1);
}
nav a:hover, nav a:focus, nav a.current {
    color: #FF6B6B;
    border-color: #FF6B6B;
}
nav a:focus {
    background: rgba(0,0,0, 0.1);
}   
/* ... */

